--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/k-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KOSSACK SC</title>
+    <meta name="keywords" content="Free Timer, Tabata, Timer, EMON, AMRAP, For Time, Online Timer, Gym, CrossFit, CrossFit Timer, Tabata Clock, Tabata Training">
+    <meta name="description" content="A Free Online Timer for Tabata, EMOM, AMRAP and For Time. Free and easy to use.">
+    <title>Timer Online - TABATA, EMOM, AMRAP - Powered by Kossack</title>
   </head>
   <body>
     <div id="root"></div>
