--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/k-logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/k-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Free Timer, Tabata, Timer, EMON, AMRAP, For Time, Online Timer, Gym, CrossFit, CrossFit Timer, Tabata Clock, Tabata Training">
     <meta name="description" content="A Free Online Timer for Tabata, EMOM, AMRAP and For Time. Free and easy to use.">
