--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Free Timer, Tabata, Timer, EMON, AMRAP, For Time, Online Timer, Gym, CrossFit, CrossFit Timer, Tabata Clock, Tabata Training">
     <meta name="description" content="A Free Online Timer for Tabata, EMOM, AMRAP and For Time. Free and easy to use.">
+    <meta property="twitter:image" content="Twitter link preview image URL">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Twitter link preview title">
+    <meta property="twitter:description" content="Twitter link preview description">
+    <meta property="og:image" content="/k-logo.png">
+    <meta property="og:title" content="Link preview title">
+    <meta property="og:description" content="Link preview description" />
+    <meta property="og:url" content="Canonical link preview URL">
     <title>Timer Online - TABATA, EMOM, AMRAP - Powered by Kossack</title>
   </head>
   <body>
