--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Twitter link preview title">
     <meta property="twitter:description" content="Twitter link preview description">
-    <meta property="og:image" content="/k-logo.png">
-    <meta property="og:title" content="Link preview title">
-    <meta property="og:description" content="Link preview description" />
+    <meta property="og:image" content="https://kossack.vercel.app/k-logo.png">
+    <meta property="og:title" content="CrossFit Timer, Tabata, Emon, Amrap">
+    <meta property="og:description" content="A Free Online Timer for Tabata, EMOM, AMRAP and For Time. Free and easy to use." />
     <meta property="og:url" content="Canonical link preview URL">
     <title>Timer Online - TABATA, EMOM, AMRAP - Powered by Kossack</title>
   </head>
